# rust-integration-demo-http

./: Cargo.toml  k6_test.js  spec.yaml  swagger.html
src/: main.rs
src/middleware/: log.rs
src/routes/: minio.rs  mod.rs  openapi.rs  proxy.rs  transform.rs
